[project]
name = "browse-repos"
version = "0.1.0"
description = ""
authors = [
    {name = "nikhil",email = "<aaa@aaa.aaa>"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "markdown (>=3.8,<4.0)",
    "pygments (>=2.19.1,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
